# pokemon-fangame-cpp

./: .gitignore  CMakeLists.txt  README.md
assets/map/: Bourg-Palette.tmx  bourg-terreux.tmx  bpHouse.tmx  map-test.json  map-test.tmx  map1.txt  playerHouse.tmx  professorLab.tmx  rivalHouse.tmx  road1.tmx
assets/map/sprites/: interior1.tsx  interior2.tsx  interior3.tsx  pokemon-red-building.tsx  pokemon-red.tsx  test.tsx
assets/pokemon/data/: build_slim.cpp  get_pokedex.cpp
assets/saves/: save_slot_1.sav
assets/sprites/: Sans titre.xcf  pokemon-red.tsx
docs/: POKEMON_ROADMAP.md
docs/diagramme/: diagramme-de-classe.txt
include/: Button.hpp  Character.hpp  Entity.hpp  Game.hpp  GameState.hpp  LoadMap.hpp  MainMenuScene.hpp  Map.hpp  MapRenderer.hpp  Party.hpp  Player.hpp  Pokemon.hpp  SaveManager.hpp  Scene.hpp  SelectGameScene.hpp  Tile.hpp  TileSetManager.hpp  TileTypeUtils.hpp  TiledMapLoader.hpp
include/Core/: Game.hpp  GameState.hpp
include/Entity/: Character.hpp  Entity.hpp  Move.hpp  Party.hpp  Player.hpp  Pokemon.hpp  PokemonDB.hpp  PokemonInstance.hpp  PokemonSpecies.hpp  Types.hpp  XPCurves.hpp
include/UI/: Button.hpp  MainMenuScene.hpp  Scene.hpp  SelectGameScene.hpp
include/Utils/: SaveManager.hpp
include/World/: Map.hpp  MapRenderer.hpp  Tile.hpp  TiledMapLoader.hpp
src/: Button.cpp  Character.cpp  Entity.cpp  Game.cpp  GameState.cpp  LoadMap.cpp  MainMenuScene.cpp  Map.cpp  MapRenderer.cpp  Player.cpp  SaveManager.cpp  SelectGameScene.cpp  Tile.cpp  TileSetManager.cpp  TileTypeUtils.cpp  TiledMapLoader.cpp  main.cpp
src/Core/: Game.cpp  GameState.cpp
src/Entity/: Character.cpp  Entity.cpp  Player.cpp  PokemonDB.cpp  PokemonInstance.cpp  XPCurves.cpp
src/UI/: Button.cpp  MainMenuScene.cpp  SelectGameScene.cpp
src/Utils/: SaveManager.cpp
src/World/: Map.cpp  MapRenderer.cpp  Tile.cpp  TiledMapLoader.cpp
tests/: CMakeLists.txt  test_PokemonInstance.cpp  test_basic.cpp
